# NativePythonCore

./: .gitignore  CMakeLists.txt  FindBoost.cmake  README.md  buildsystem-arm64.Dockerfile  buildsystem-x86_64.Dockerfile  buildsystem.Dockerfile  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
src/: library.h
src/parser/: Lexer.cpp  Lexer.h  Symbol.cpp  Symbol.h
tests/: test_dummy.cpp
tests/parser/: test_lexical_analyzer.cpp  test_symbols_and_trivia.cpp
